# omni-rpc

./: .bandit  .dockerignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: build_docker.yml  build_image.yml  python-ci.yml
config/: config.template.yaml  dev.yaml  prod.yaml  staging.yaml
omni_rpc/: custom_logging.py  main.py
omni_rpc/providers/: providers.py
omni_rpc/routers/: proxy_rpc.py
openapi/: omni-rpc.json
scripts/: generate_openapi.py
src/omni_rpc/: _app.py  arg_parser.py  cli.py  logging.py  main.py
src/omni_rpc/adapters/inbound/: http.py
src/omni_rpc/adapters/outbound/: ethereum_lists_loader.py  httpx_provider.py  in_memory_chain_registry.py  null_cache.py  python_logger.py  redis_cache.py
src/omni_rpc/application/: bootstrap_chains.py  chain_dedup.py  load_chains.py  sync_chains.py  update_chains.py
src/omni_rpc/config/: settings.py
src/omni_rpc/domain/model/: chain.py
src/omni_rpc/domain/ports/: cache.py  chain_loader.py  chain_registry.py  logger.py  provider.py
tests/: conftest.py  test_chain_dedup.py  test_domain_model.py  test_ethereum_lists_loader.py  test_http_router.py  test_httpx_provider.py  test_in_memory_chain_registry.py  test_load_chains.py  test_settings.py
