[tool.poetry]
name = "omni-rpc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
web3 = "^6.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
